fixed current issues on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -94,7 +94,6 @@ a {
   color: white;
   text-shadow: 3px 2px 5px #000000;
   font-family: 'Merriweather', serif;
-  text-align: center;
 }
 
 #p2 {
@@ -102,7 +101,6 @@ a {
   color: white;
   font-family: 'Merriweather', serif;
   text-shadow: 3px 2px 5px #000000;
-  text-align: center;
 }
 
 #feedbackform{
